@@ -348,7 +348,8 @@ h1.alert, h2.alert		{color: #000000;}
 .changeling				{color: #800080;	font-style: italic;}
 .alertsyndie			{color: #FF0000;	font-size: 185%;	font-weight: bold;}
 
-.spider					{color: #4d004d;	font-weight: bold;	font-size: 185%;}
+.spider					{color: #4d004d;} /* austation begin -- fix spider class inconsistencies */
+.spiderlarge			{color: #4d004d;	font-weight: bold;	font-size: 185%;} /* austation end */
 
 .interface				{color: #330033;}
 
