@@ -26,3 +26,4 @@ Terra:Ports catbans from hippie
 Terra:Thanos car with sprites by me (Terra)
 Terra:Map Exports
 Mr. Lostman:Mirror Hair Colour Changing
+Terra:Friendly Spiders
